--- a/templates/index.html
+++ b/templates/index.html
@@ -9,33 +9,62 @@
         <form action="{{ url_for('predict')}}" method="post">
             <h2>Predictive Analysis for Liver Disease</h2>
 
-            <h3>Age</h3>
-            <input id="first" name="Age" type="number" placeholder="1" min="1" max="100" required="required">
+            <div class="block">
+                <label>Age</label>
+                <input id="first" name="Age" type="number" placeholder="1" min="1" max="100" required="required">
+            </div>
 
-            <h3>Gender</h3><br><select name="Gender" id="second" required="required">
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-            </select>
+            <br>
 
-            <h3>Total Bilirubin</h3>
-            <input id="third" name="Total_Bilirubin" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            <div class="block">
+                <label>Gender</label>
+                <select name="Gender" id="second" required="required">
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                </select>
+            </div>
 
+            <br>
 
-            <h3>Alkaline Phosphotase</h3>
-            <input id="fourth" name="Alkaline_Phosphotase" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            <div class="block">
+                <label>Total Bilirubin</label>
+                <input id="third" name="Total_Bilirubin" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            </div>
 
-            <h3>Alamine Aminotransferase</h3>
-            <input id="fifth" name="Alamine_Aminotransferase" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            <br>
 
+            <div class="block">
+                <label>Alkaline Phosphotase</label>
+                <input id="fourth" name="Alkaline_Phosphotase" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            </div>
 
-            <h3>Total Protiens</h3>
-            <input id="sixth" name="Total_Protiens" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            <br>
 
+            <div class="block">
+                <label>Alamine Aminotransferase</label>
+                <input id="fifth" name="Alamine_Aminotransferase" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            </div>
 
-            <h3>Albumin and Globulin Ratio</h3>
-            <input id="seventh" name="Albumin_and_Globulin_Ratio" placeholder="0.0" step="0.01" min="0" type="number",required="required">
+            <br>
 
-            <br><br><button id="sub" type="submit ">Calculate the Disease Prediction</button>
+            <div class="block">
+                <label>Total Protiens</label>
+                <input id="sixth" name="Total_Protiens" type="number" placeholder="0.0" step="0.01" min="0" required="required">
+            </div>
+
+            <br>
+
+            <div class="block">
+                <label>Albumin and Globulin Ratio</label>
+                <input id="seventh" name="Albumin_and_Globulin_Ratio" placeholder="0.0" step="0.01" min="0" type="number",required="required">
+
+            </div>
+
+            <br>
+            <br>
+
+            <button id="sub" type="submit ">Check Result</button>
+
             <br>
 
 
@@ -116,6 +145,12 @@
             font-size: 20px;
             text-align: center;
         }
+
+        label {
+            display: inline-block;
+            width: 140px;
+            text-align: right;
+        }​
 
     </style>
 
